--- a/keenbrace/User.plist
+++ b/keenbrace/User.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>New item - 3</key>
+	<string></string>
 	<key>New item - 2</key>
 	<string></string>
 	<key>New item</key>
